--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -27,3 +27,13 @@ msgstr "Bienvenue chez Holberton"
 #: templates/6-index.html:7 templates/7-index.html:7 templates/index.html:7
 msgid "home_header"
 msgstr "Bonjour monde!"
+
+#: templates/5-index.html:10 templates/6-index.html:10
+#: templates/7-index.html:10 templates/index.html:10
+msgid "logged_in_as"
+msgstr "Vous êtes connecté en tant que %(username)s."
+
+#: templates/5-index.html:12 templates/6-index.html:12
+#: templates/7-index.html:12 templates/index.html:12
+msgid "not_logged_in"
+msgstr "Vous n'êtes pas connecté."
